# mdict-parser

./: Cargo.toml  readme.md
src/: lib.rs  mdict.rs  parser.rs
tests/: mdx.rs
